b=571078; fix webgl attribute validation; r=bjacob